<resources>
    <string name="app_name">Weather Forecast</string>

    <string name="activity_main">San Francisco</string>
    <string name="subtitle">Sunday, May 29</string>
    <string name="search_city">Search city</string>
    <string name="all_cities">All cities</string>
    <string name="title_all_cities">All cities</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="no_connection">It seems that you are not connected to the internet, we need the internet connection on the first access!</string>
    <string name="try_again">try again</string>
    <string name="measered_wind">m/s</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

</resources>
