<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
    android:id="@+id/viewFlipperMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity"
        android:orientation="vertical"
        android:id="@+id/coordinatorLayout">

        <include layout="@layout/toolbar_main" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                >

                <LinearLayout
                    android:id="@+id/linearWeather"
                    android:layout_width="330dp"
                    android:layout_height="330dp"
                    android:padding="20dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/background_round"
                    android:elevation="@dimen/elevation_items"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:gravity="center"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <ImageView
                                android:id="@+id/imageWeather"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/ic_cloud"
                                android:paddingStart="20dp"
                                android:paddingEnd="0dp"
                                />

                            <TextView
                                android:id="@+id/txtTemperature"
                                android:layout_weight="1"
                                style="@style/titles"
                                tools:text="14°"
                                android:textSize="40sp"
                                android:gravity="start|center"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="0dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            >

                            <TextView
                                android:id="@+id/txtDescription"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@style/texts"
                                tools:text="Description"
                                android:gravity="center"
                                />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                >

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:src="@drawable/ic_wind"
                                    />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginStart="7dp"
                                    >

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal"
                                        >

                                        <TextView
                                            android:id="@+id/txtWind"
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            style="@style/titles"
                                            tools:text="14"
                                            android:textColor="@color/primaryText"
                                            />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            style="@style/texts"
                                            android:layout_marginStart="2dp"
                                            android:text="@string/measered_wind"
                                            android:textColor="@color/primaryText"
                                            android:textSize="10dp"
                                            android:gravity="center"
                                            />

                                    </LinearLayout>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        style="@style/texts"
                                        android:text="@string/wind"
                                        />

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                >

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:src="@drawable/ic_drop"
                                    />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginStart="7dp"
                                    >

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal"
                                        >

                                        <TextView
                                            android:id="@+id/txtHumidity"
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            style="@style/titles"
                                            tools:text="72"
                                            android:textStyle="bold"
                                            android:textColor="@color/primaryText"
                                            />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:layout_marginStart="2dp"
                                            android:text="%"
                                            style="@style/texts"
                                            android:textColor="@color/primaryText"
                                            android:textSize="10dp"
                                            android:gravity="center"
                                            />

                                    </LinearLayout>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        style="@style/texts"
                                        android:text="@string/humidity"
                                        />

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingEnd="0dp"
                            android:paddingStart="20dp"
                            >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_sunrise"
                                />

                            <TextView
                                android:id="@+id/txtSunrise"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@style/texts"
                                android:text="@string/sunrise"
                                android:textColor="@color/primaryText"
                                android:gravity="center"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingEnd="20dp"
                            android:paddingStart="0dp"
                            >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_sunset"
                                />

                            <TextView
                                android:id="@+id/txtSunset"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@style/texts"
                                android:text="@string/sunset"
                                android:textColor="@color/primaryText"
                                android:gravity="center"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:layout_marginBottom="15dp"
                >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewNextDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

</ViewFlipper>